public/css/style.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}
body {
  line-height: 1;
}
ol,
ul {
  list-style: none;
}
blockquote,
q {
  quotes: none;
}
blockquote:before,
blockquote:after,
q:before,
q:after {
  content: "";
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}

/* use border-box so that padding and margins are applied INSIDE elements' width. */

* {
  box-sizing: border-box;
}

body{
  background-color: #1C3041;
  /* display: flex;
  flex-direction: column;
  align-content: center; */
}

main{
  display: flex;
  flex-direction: column;
  align-content: center;
  align-items: center;
  justify-content: center; 
  font-family: 'Libre Franklin', Times, serif;
  color: rgb(129, 243, 232);
  /* height: 100vh; */
  margin: 0 128px 0 128px;
  padding: 0;
}

.header-area {
  border-left: salmon 4px solid;
  width: 100%;
}

.header-container {
  border-left: yellow 4px solid; 
  border-bottom: yellow 4px solid;
  margin-left: 24px;
  width: calc(100% - 24px);
  padding-right: 24px;
  padding-top: 80px;
  display: flex;
  justify-content: center;
  flex-direction: column;
  padding-bottom: 36px;
  margin-bottom: 48px;
}

h1 {
  text-align: center;
  color: rgb(154, 252, 255);
  font-family: 'Carter One', Times, serif;
  font-size: 4rem;
  margin-bottom: 42px;
}

form{
  margin: auto;
}
input{
  font-size: 1rem;
padding: 0.5rem;
margin: 0.5rem;
}
button{
  font-size: 1rem;
  padding: 0.5rem;
  margin: 0.5rem;
}

.content-container {
  border-top: salmon 4px solid;
  border-right: salmon 4px solid;
  width: 100%;
}

.container-style{
  width: 100%;
  padding: 48px 64px 48px 32px;
  display: none;
  }

.container-style > div{
  padding-top: 16px;
  padding-bottom: 8px;
}

.container-style > div > p {
  padding-top: 8px;
  font-size: 0.8rem;
}

a {
  font-family: 'Libre Franklin', Times, serif;
  color: #FF6F4F;
  text-decoration: none;
}

a:hover {
  color: #89043D;
  -webkit-animation: neon2 1.5s ease-in-out infinite alternate;
  -moz-animation: neon2 1.5s ease-in-out infinite alternate;
  animation: neon2 1.5s ease-in-out infinite alternate;
}



.visually-hidden {
  /* https://snook.ca/archives/html_and_css/hiding-content-for-accessibility */
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
  clip: rect(1px, 1px, 1px, 1px);
}

@-webkit-keyframes neon2 {
  from {
    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #228DFF, 0 0 70px #228DFF, 0 0 80px #228DFF, 0 0 100px #228DFF, 0 0 150px #228DFF;
  }
  to {
    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #228DFF, 0 0 35px #228DFF, 0 0 40px #228DFF, 0 0 50px #228DFF, 0 0 75px #228DFF;
  }
}

/* tab section */

/* Style the tab */
.tab {
  overflow: hidden;
  /* border: 1px solid #ccc; */
  background-color: #1C3041;
  display: flex;
  justify-content: space-around;
}

.tab-hidden {
  display: none;
}

/* Style the buttons that are used to open the tab content */
.tab button {
  background-color: inherit;
  border: none;
  outline: none;
  cursor: pointer;
  transition: 0.3s;
  width: 100%;
  margin: 0;
}

/* Change background color of buttons on hover */
.tab button:hover {
  background-color: lightsalmon;
}

/* Create an active/current tablink class */
.tab button.active {
  background-color: salmon;
}

